gen/memo.parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Command: peg$parseCommand };
  var peg$startRuleFunction = peg$parseCommand;

  var peg$c0 = ".";
  var peg$c1 = "emember";
  var peg$c2 = "as";
  var peg$c3 = "nt";
  var peg$c4 = "eger";
  var peg$c5 = "loat";
  var peg$c6 = "tring";
  var peg$c7 = "rray";
  var peg$c8 = "har";
  var peg$c9 = "acter";
  var peg$c10 = "ell me";
  var peg$c11 = "about";
  var peg$c12 = "(";
  var peg$c13 = ")";
  var peg$c14 = "plus";
  var peg$c15 = "minus";
  var peg$c16 = "times";
  var peg$c17 = "divided by";
  var peg$c18 = "the sum of";
  var peg$c19 = "and";
  var peg$c20 = "the difference between";
  var peg$c21 = "the product of";
  var peg$c22 = "the quotient of";
  var peg$c23 = "illion";
  var peg$c24 = "housand";
  var peg$c25 = "undred";
  var peg$c26 = ",";
  var peg$c27 = "-";
  var peg$c28 = "ten";
  var peg$c29 = "twenty";
  var peg$c30 = "thirty";
  var peg$c31 = "forty";
  var peg$c32 = "fifty";
  var peg$c33 = "sixty";
  var peg$c34 = "seventy";
  var peg$c35 = "eighty";
  var peg$c36 = "ninety";
  var peg$c37 = "zero";
  var peg$c38 = "one";
  var peg$c39 = "two";
  var peg$c40 = "three";
  var peg$c41 = "four";
  var peg$c42 = "five";
  var peg$c43 = "six";
  var peg$c44 = "seven";
  var peg$c45 = "eight";
  var peg$c46 = "nine";
  var peg$c47 = "eleven";
  var peg$c48 = "twelve";
  var peg$c49 = "thirteen";
  var peg$c50 = "fourteen";
  var peg$c51 = "fifteen";
  var peg$c52 = "sixteen";
  var peg$c53 = "seventeen";
  var peg$c54 = "eighteen";
  var peg$c55 = "nineteen";
  var peg$c56 = ", and";
  var peg$c57 = " and";
  var peg$c58 = "\"";
  var peg$c59 = "'";
  var peg$c60 = "\\";
  var peg$c61 = "b";
  var peg$c62 = "f";
  var peg$c63 = "n";
  var peg$c64 = "r";
  var peg$c65 = "t";
  var peg$c66 = "v";

  var peg$r0 = /^[Rr]/;
  var peg$r1 = /^[Ii]/;
  var peg$r2 = /^[Ff]/;
  var peg$r3 = /^[Ss]/;
  var peg$r4 = /^[Aa]/;
  var peg$r5 = /^[Cc]/;
  var peg$r6 = /^[Tt]/;
  var peg$r7 = /^[a-zA-Z\xE4\xF6\xFC\xDF\xC4\xD6\xDC0-9_]/;
  var peg$r8 = /^[Mm]/;
  var peg$r9 = /^[Hh]/;
  var peg$r10 = /^["\\]/;
  var peg$r11 = /^['\\]/;
  var peg$r12 = /^["'\\]/;
  var peg$r13 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(".", false);
  var peg$e1 = peg$classExpectation(["R", "r"], false, false);
  var peg$e2 = peg$literalExpectation("emember", false);
  var peg$e3 = peg$literalExpectation("as", false);
  var peg$e4 = peg$classExpectation(["I", "i"], false, false);
  var peg$e5 = peg$literalExpectation("nt", false);
  var peg$e6 = peg$literalExpectation("eger", false);
  var peg$e7 = peg$classExpectation(["F", "f"], false, false);
  var peg$e8 = peg$literalExpectation("loat", false);
  var peg$e9 = peg$classExpectation(["S", "s"], false, false);
  var peg$e10 = peg$literalExpectation("tring", false);
  var peg$e11 = peg$classExpectation(["A", "a"], false, false);
  var peg$e12 = peg$literalExpectation("rray", false);
  var peg$e13 = peg$classExpectation(["C", "c"], false, false);
  var peg$e14 = peg$literalExpectation("har", false);
  var peg$e15 = peg$literalExpectation("acter", false);
  var peg$e16 = peg$anyExpectation();
  var peg$e17 = peg$classExpectation(["T", "t"], false, false);
  var peg$e18 = peg$literalExpectation("ell me", false);
  var peg$e19 = peg$literalExpectation("about", false);
  var peg$e20 = peg$literalExpectation("(", false);
  var peg$e21 = peg$literalExpectation(")", false);
  var peg$e22 = peg$classExpectation([["a", "z"], ["A", "Z"], "\xE4", "\xF6", "\xFC", "\xDF", "\xC4", "\xD6", "\xDC", ["0", "9"], "_"], false, false);
  var peg$e23 = peg$literalExpectation("plus", false);
  var peg$e24 = peg$literalExpectation("minus", false);
  var peg$e25 = peg$literalExpectation("times", false);
  var peg$e26 = peg$literalExpectation("divided by", false);
  var peg$e27 = peg$literalExpectation("the sum of", false);
  var peg$e28 = peg$literalExpectation("and", false);
  var peg$e29 = peg$literalExpectation("the difference between", false);
  var peg$e30 = peg$literalExpectation("the product of", false);
  var peg$e31 = peg$literalExpectation("the quotient of", false);
  var peg$e32 = peg$classExpectation(["M", "m"], false, false);
  var peg$e33 = peg$literalExpectation("illion", false);
  var peg$e34 = peg$literalExpectation("housand", false);
  var peg$e35 = peg$classExpectation(["H", "h"], false, false);
  var peg$e36 = peg$literalExpectation("undred", false);
  var peg$e37 = peg$literalExpectation(",", false);
  var peg$e38 = peg$literalExpectation("-", false);
  var peg$e39 = peg$literalExpectation("ten", false);
  var peg$e40 = peg$literalExpectation("twenty", false);
  var peg$e41 = peg$literalExpectation("thirty", false);
  var peg$e42 = peg$literalExpectation("forty", false);
  var peg$e43 = peg$literalExpectation("fifty", false);
  var peg$e44 = peg$literalExpectation("sixty", false);
  var peg$e45 = peg$literalExpectation("seventy", false);
  var peg$e46 = peg$literalExpectation("eighty", false);
  var peg$e47 = peg$literalExpectation("ninety", false);
  var peg$e48 = peg$literalExpectation("zero", false);
  var peg$e49 = peg$literalExpectation("one", false);
  var peg$e50 = peg$literalExpectation("two", false);
  var peg$e51 = peg$literalExpectation("three", false);
  var peg$e52 = peg$literalExpectation("four", false);
  var peg$e53 = peg$literalExpectation("five", false);
  var peg$e54 = peg$literalExpectation("six", false);
  var peg$e55 = peg$literalExpectation("seven", false);
  var peg$e56 = peg$literalExpectation("eight", false);
  var peg$e57 = peg$literalExpectation("nine", false);
  var peg$e58 = peg$literalExpectation("eleven", false);
  var peg$e59 = peg$literalExpectation("twelve", false);
  var peg$e60 = peg$literalExpectation("thirteen", false);
  var peg$e61 = peg$literalExpectation("fourteen", false);
  var peg$e62 = peg$literalExpectation("fifteen", false);
  var peg$e63 = peg$literalExpectation("sixteen", false);
  var peg$e64 = peg$literalExpectation("seventeen", false);
  var peg$e65 = peg$literalExpectation("eighteen", false);
  var peg$e66 = peg$literalExpectation("nineteen", false);
  var peg$e67 = peg$literalExpectation(", and", false);
  var peg$e68 = peg$literalExpectation(" and", false);
  var peg$e69 = peg$literalExpectation("\"", false);
  var peg$e70 = peg$literalExpectation("'", false);
  var peg$e71 = peg$classExpectation(["\"", "\\"], false, false);
  var peg$e72 = peg$literalExpectation("\\", false);
  var peg$e73 = peg$classExpectation(["'", "\\"], false, false);
  var peg$e74 = peg$classExpectation(["\"", "'", "\\"], false, false);
  var peg$e75 = peg$literalExpectation("b", false);
  var peg$e76 = peg$literalExpectation("f", false);
  var peg$e77 = peg$literalExpectation("n", false);
  var peg$e78 = peg$literalExpectation("r", false);
  var peg$e79 = peg$literalExpectation("t", false);
  var peg$e80 = peg$literalExpectation("v", false);
  var peg$e81 = peg$otherExpectation("whitespace");
  var peg$e82 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(c) {
	return c;
};
  var peg$f1 = function(v) {
	return {
    	cmd: "reset",
        varname: v.varname
    };
};
  var peg$f2 = function(v, exp) {
	return {
    	cmd: "let",
        varname: v.varname,
        exp: exp
    };
};
  var peg$f3 = function(f) {
	return f.join("").toLowerCase();
};
  var peg$f4 = function() {
	return "undetermined"
};
  var peg$f5 = function(exp) {
	return {
    	cmd: "print",
        exp: exp
    };
};
  var peg$f6 = function(a) {
	return {
        class: "exp",
        type: "S_Expression",
        value: a
  };
};
  var peg$f7 = function(e) {
    return {
        class: "exp",
        type: "atom",
        value: e
    }
};
  var peg$f8 = function() {
	throw new Error("Cannot assign a new value to a reserved name");
};
  var peg$f9 = function(v) {
	return {
        type: "variable",
        varname: v.join("")
    };
};
  var peg$f10 = function(a) {
	return a;
};
  var peg$f11 = function(head, tail) {
      return tail.reduce(function(result, element) {
        if (element[1] === "plus") { 
          return {
              class: "exp",
              type: "Addition",
              left: result,
              right: element[3]
          };
        }
        if (element[1] === "minus") {
          return {
              class: "exp",
              type: "Subtraction",
              left: result,
              right: element[3]
          };
        }
      }, head);
    };
  var peg$f12 = function(head, tail) {
      return tail.reduce(function(result, element) {
        if (element[1] === "times") { 
          return {
              class: "exp",
              type: "Product",
              left: result,
              right: element[3]
          };
        }
        if (element[1] === "divided by") { 
          return {
              class: "exp",
              type: "Division",
              left: result,
              right: element[3]
          };
        }
    }, head);
};
  var peg$f13 = function(e1, e2) {
    return {
      class: "exp",
      type: "Addition",
      left: e1,
      right: e2
    };
  };
  var peg$f14 = function(e1, e2) {
    return {
      class: "exp",
      type: "Subtraction",
      left: e1,
      right: e2
    };
  };
  var peg$f15 = function(e1, e2) {
    return {
      class: "exp",
      type: "Multiplication",
      left: e1,
      right: e2
    };
  };
  var peg$f16 = function(e1, e2) {
    return {
      class: "exp",
      type: "Division",
      left: e1,
      right: e2
    };
};
  var peg$f17 = function(mil, thou, hun, end) {
	let retval = mil;
    if (mil) retval += mil;
    if (thou) retval += thou;
    if (hun) retval += hun;
    if (end) retval += end;
	return { type: "IntLiteral", value: retval };
};
  var peg$f18 = function(thou, hun, end) {
	let retval = thou;
    if (hun) retval += hun;
    if (end) retval += end;
	return { type: "IntLiteral", value: retval };
};
  var peg$f19 = function(hun, end) {
	let retval = hun;
    if (end) retval += end;
	return { type: "IntLiteral", value: retval };
};
  var peg$f20 = function(end) {
	return { type: "IntLiteral", value: end };
};
  var peg$f21 = function(hun, end) {
	let retval = 0;
    if (end) retval += end;
    if (hun) retval += hun;
	return retval * 1000000;
};
  var peg$f22 = function(hun, end) {
	let retval = 0;
    if (end) retval += end;
    if (hun) retval += hun;
	return retval * 1000;
};
  var peg$f23 = function(end) {
	return end * 1000;
};
  var peg$f24 = function(end) {
	return end * 100;
};
  var peg$f25 = function(tens, ones) {
	let retval = 0;
	if (tens) retval += tens;
	if (ones) retval += ones;
	return retval;
};
  var peg$f26 = function() { return 10; };
  var peg$f27 = function() { return 20; };
  var peg$f28 = function() { return 30; };
  var peg$f29 = function() { return 40; };
  var peg$f30 = function() { return 50; };
  var peg$f31 = function() { return 60; };
  var peg$f32 = function() { return 70; };
  var peg$f33 = function() { return 80; };
  var peg$f34 = function() { return 90; };
  var peg$f35 = function() { return 0; };
  var peg$f36 = function() { return 1; };
  var peg$f37 = function() { return 2; };
  var peg$f38 = function() { return 3; };
  var peg$f39 = function() { return 4; };
  var peg$f40 = function() { return 5; };
  var peg$f41 = function() { return 6; };
  var peg$f42 = function() { return 7; };
  var peg$f43 = function() { return 8; };
  var peg$f44 = function() { return 9; };
  var peg$f45 = function() { return 0; };
  var peg$f46 = function() { return 11; };
  var peg$f47 = function() { return 12; };
  var peg$f48 = function() { return 13; };
  var peg$f49 = function() { return 14; };
  var peg$f50 = function() { return 15; };
  var peg$f51 = function() { return 16; };
  var peg$f52 = function() { return 17; };
  var peg$f53 = function() { return 18; };
  var peg$f54 = function() { return 19; };
  var peg$f55 = function(chars) {
    return {
        class: "value",
        type: "string",
        value: chars.join('')
    };
};
  var peg$f56 = function(char) {
    return {
        class: "value",
        type: "char",
        value: char
    };
};
  var peg$f57 = function(char) { return char; };
  var peg$f58 = function(sequence) { return sequence; };
  var peg$f59 = function(char) { return char; };
  var peg$f60 = function(sequence) { return sequence; };
  var peg$f61 = function() { return "\b";   };
  var peg$f62 = function() { return "\f";   };
  var peg$f63 = function() { return "\n";   };
  var peg$f64 = function() { return "\r";   };
  var peg$f65 = function() { return "\t";   };
  var peg$f66 = function() { return "\x0B"; };
  var peg$f67 = function() { return null; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseCommand() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parsePrint();
    if (s1 === peg$FAILED) {
      s1 = peg$parseLet();
      if (s1 === peg$FAILED) {
        s1 = peg$parseReset();
      }
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 46) {
        s2 = peg$c0;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseReset() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLet() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parseIdentifier();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (input.substr(peg$currPos, 2) === peg$c2) {
            s6 = peg$c2;
            peg$currPos += 2;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
          if (s6 !== peg$FAILED) {
            s7 = peg$parseExpression();
            if (s7 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f2(s4, s7);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseType() {
    var s0, s1, s2, s3, s4;
